# nlu

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark.txt  data.pth  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
nlu/: .env.template  app.py  brain.py  cli.py  load_models.py  train.py  utils.py
nlu/apis/v1/: __init__.py  nlu.py  skills.py
nlu/crud/: skills.py
nlu/database/: client.py
nlu/functions/: __init__.py  chatgpt.py  functions_mockup.py  intents.py
nlu/intents/: get-citation.json  get-date.json  get-weather.json  light-off.json  order_food.json  say-hello.json  tacos.json  turn-on-light.json
nlu/schemas/: nlu.py  skills.py
